# poem-ext

./: .envrc  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  test.yml
src/: auth.rs  db.rs  lib.rs  panic_handler.rs  patch_value.rs  response.rs  shield_mw.rs  static_string.rs
src/response/: macros.rs  mod.rs
src/responses/: macros.rs  merge_schemas.rs  mod.rs
tests/: auth.rs  panic_handler.rs  responses.rs
tests/common/: mod.rs
