[package]
name = "poem-ext"
version = "0.5.0"
description = "Extension crate for poem/poem-openapi"
license = "MIT"
documentation = "https://docs.rs/poem-ext/"
repository = "https://github.com/Defelo/poem-ext"
edition = "2021"

[features]
default = ["sea-orm"]
sea-orm = ["dep:sea-orm"]

[dependencies]
itertools = { version = "0.10.5", default-features = false, features = ["use_std"] }
paste = { version = "1.0.12", default-features = false }
poem = { version = "1.3.55", default-features = false }
poem-openapi = { version = "2.0.26", default-features = false }
sea-orm = { version = "0.11.1", default-features = false, optional = true, features = ["macros"] }
tracing = { version = "0.1.37", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", default-features = false, features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
