[package]
name = "poem-ext"
version = "0.8.0"
description = "Extension crate for poem/poem-openapi"
license = "MIT"
documentation = "https://docs.rs/poem-ext/"
repository = "https://github.com/Defelo/poem-ext"
edition = "2021"
rust-version = "1.65.0"

[features]
default = ["sea-orm", "shield"]
sea-orm = ["dep:sea-orm"]
shield = ["dep:tokio-shield"]
serde = ["dep:serde"]

[dependencies]
itertools = { version = "0.11.0", default-features = false, features = ["use_std"] }
paste = { version = "1.0.12", default-features = false }
poem = { version = "1.3.55", default-features = false }
poem-openapi = { version = "2.0.26", default-features = false }
sea-orm = { version = "0.11.3", default-features = false, optional = true, features = ["macros"] }
serde = { version = "1.0.167", default-features = false, optional = true, features = ["derive"] }
tokio-shield = { version = "0.1.0", default-features = false, optional = true }
tracing = { version = "0.1.37", default-features = false }

[dev-dependencies]
tokio = { version = "1.28.0", default-features = false, features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
