[package]
name = "poem-ext"
version = "0.10.0"
description = "Extension crate for poem/poem-openapi"
license = "MIT"
documentation = "https://docs.rs/poem-ext/"
repository = "https://github.com/Defelo/poem-ext"
edition = "2021"
rust-version = "1.67.0"

[features]
default = ["sea-orm", "shield", "serde"]
sea-orm = ["dep:sea-orm"]
shield = ["dep:tokio-shield"]
serde = ["dep:serde"]

[dependencies]
itertools = { version = "0.12.0", default-features = false, features = ["use_std"] }
paste = { version = "1.0.12", default-features = false }
poem = { version = "1.3.55", default-features = false }
poem-openapi = { version = "4.0.0", default-features = false }
sea-orm = { version = "0.12.1", default-features = false, optional = true, features = ["macros"] }
serde = { version = "1.0.167", default-features = false, optional = true }
tokio-shield = { version = "0.1.0", default-features = false, optional = true }
tracing = { version = "0.1.37", default-features = false }

[dev-dependencies]
tokio = { version = "1.28.0", default-features = false, features = ["rt-multi-thread"] }
serde_json = { version = "1.0.100", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
